--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@vitejs/plugin-vue": "^2.0.0",
     "typescript": "^4.4.4",
     "vite": "^2.7.2",
-    "vue-tsc": "^0.29.8"
+    "vue-tsc": "^0.29.8",
+    "sass": "^1.26.5",
+    "sass-loader": "^8.0.2"
   }
 }
