--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "element-plus": "^1.3.0-beta.1",
     "vue": "^3.2.25",
     "vue-router": "4",
     "vuex": "^4.0.2"
@@ -14,10 +15,13 @@
   "devDependencies": {
     "@types/node": "^17.0.8",
     "@vitejs/plugin-vue": "^2.0.0",
+    "autoprefixer": "^10.4.1",
+    "postcss": "^8.4.5",
+    "sass": "^1.26.5",
+    "sass-loader": "^8.0.2",
+    "tailwindcss": "^3.0.10",
     "typescript": "^4.4.4",
     "vite": "^2.7.2",
-    "vue-tsc": "^0.29.8",
-    "sass": "^1.26.5",
-    "sass-loader": "^8.0.2"
+    "vue-tsc": "^0.29.8"
   }
 }
