--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vueuse/core": "^7.5.4",
     "element-plus": "^1.3.0-beta.1",
     "vue": "^3.2.25",
     "vue-router": "4",
@@ -21,6 +22,7 @@
     "sass-loader": "^8.0.2",
     "tailwindcss": "^3.0.10",
     "typescript": "^4.4.4",
+    "unplugin-vue-components": "^0.17.13",
     "vite": "^2.7.2",
     "vue-tsc": "^0.29.8"
   }
